[package]
name = "xevalito"
version = "0.1.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

[dependencies]
# log
log = "0.4"
env_logger = "0.6"
fast_log="1.2"

# time
chrono = { version = "0.4", features = ["serde"] }

# actix
actix-web = "3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# error handle
thiserror = "1.0"
anyhow = "1.0"

# async
async-std = "1.6"
futures = "0.3"

#rbatis支持，版本保持一致(必须)
rbatis-core = { version = "1.6.1", features = ["runtime-async-std","all-type"]}
rbatis = { version = "1.6.1" }
rbatis-macro-driver = { version = "1.6.1" }

bcrypt = "0.8"
once_cell = "1.4.1"
dashmap = "4.0.0-rc6"
crossbeam="0.7.3"
num_cpus="1.13.0"
qstring = "0.7.2"
jsonwebtoken = "7"

