[package]
name = "xevalito"
version = "0.1.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

[dependencies]
# log
log = "0.4"
env_logger = "0.8"

# time
chrono = { version = "0.4", features = ["serde"] }

# actix
actix-web = "3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# error handle
thiserror = "1.0"
anyhow = "1.0"

# async
async-std = "1.9"
futures-util = "0.3.12"

rbatis = { version = "1.8" }
bcrypt = "0.8"
once_cell = "1.4"
dashmap = "4"
crossbeam = "0.8"
num_cpus = "1.13"
qstring = "0.7.2"
jsonwebtoken = "7"

